--- a/interface/tsconfig.json
+++ b/interface/tsconfig.json
@@ -1,9 +1,4 @@
 {
-  //파일을 저장하면 컴파일하겠다고 지정하는 것
-  //아무곳에서나 되는것이 아니다.
-  "compileOnSave": true,
-  //경로
-  "extends":"./base.json",
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
@@ -82,12 +77,12 @@
 
     /* Type Checking */
     "strict": true,                                      /* Enable all strict type-checking options. */
-     "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
-     "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
+    // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+    // "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
     // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
     // "strictBindCallApply": true,                      /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
-     "strictPropertyInitialization": true,             /* Check for class properties that are declared but not set in the constructor. */
-     "noImplicitThis": true,                           /* Enable error reporting when 'this' is given the type 'any'. */
+    // "strictPropertyInitialization": true,             /* Check for class properties that are declared but not set in the constructor. */
+    // "noImplicitThis": true,                           /* Enable error reporting when 'this' is given the type 'any'. */
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
     // "noUnusedLocals": true,                           /* Enable error reporting when local variables aren't read. */
